# CS636

./: .gitignore  .gitmodules  2  CMakeLists.txt  README.md  screenlog.0
.github/workflows/: cmake.yml
include/: boundingbox.h  boundingvolumehierarchy.h  face.h  light.h  mesh.h  model.h  scene.h  sphere.h  triangle.h  vector3.h
src/: boundingbox.cpp  boundingvolumehierarchy.cpp  light.cpp  main.cpp  mesh.cpp  model.cpp  scene.cpp  sphere.cpp  triangle.cpp  vector3.cpp
